--- a/src/styles/timeline-vis.css
+++ b/src/styles/timeline-vis.css
@@ -4,6 +4,7 @@
   display: grid;
   grid-template-rows: auto 1fr;
   height: 100dvh;
+  height: 100lvh;
   color: var(--fg);
 }
 
